[gd_scene load_steps=12 format=2]

[ext_resource path="res://core/game.gd" type="Script" id=1]
[ext_resource path="res://core/World.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/player/high_score.tres" type="Resource" id=3]
[ext_resource path="res://ui/spell_label.gd" type="Script" id=4]
[ext_resource path="res://ui/wizard_theme.tres" type="Theme" id=5]
[ext_resource path="res://ui/player_health.gd" type="Script" id=6]
[ext_resource path="res://characters/player/health.tres" type="Resource" id=7]
[ext_resource path="res://ui/player_score.gd" type="Script" id=8]
[ext_resource path="res://characters/player/score.tres" type="Resource" id=9]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.1, 1 )
colors = PoolColorArray( 0.341176, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
fill_from = Vector2( 0.5, 1 )
fill_to = Vector2( 0.5, 0.94 )

[node name="Game" type="Node"]
script = ExtResource( 1 )
high_score = ExtResource( 3 )
player_score = ExtResource( 9 )

[node name="World" parent="." instance=ExtResource( 2 )]
game_over_screen = NodePath("../CanvasLayer/GUI/GameOverScreen")
death_screen = NodePath("../CanvasLayer/GUI/DeathScreen")
player_score = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )

[node name="DeathScreen" type="ColorRect" parent="CanvasLayer/GUI"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.211765, 0, 0, 0.262745 )

[node name="SpellInfo" type="TextureRect" parent="CanvasLayer/GUI"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true

[node name="SpellInfoTween" type="Tween" parent="CanvasLayer/GUI/SpellInfo"]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI"]
anchor_right = 1.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 75 )

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/GUI/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
player_health = ExtResource( 7 )

[node name="ScoreLabel" type="Label" parent="CanvasLayer/GUI/VBoxContainer"]
margin_top = 37.0
margin_right = 1280.0
margin_bottom = 54.0
text = "Score: "
script = ExtResource( 8 )
player_score = ExtResource( 9 )

[node name="HiScoreLabel" type="Label" parent="CanvasLayer/GUI/VBoxContainer"]
unique_name_in_owner = true
margin_top = 58.0
margin_right = 1280.0
margin_bottom = 75.0
text = "Highscore: "

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpellLabel" type="Label" parent="CanvasLayer/GUI/CenterContainer"]
visible = false
margin_left = 635.0
margin_top = 351.0
margin_right = 645.0
margin_bottom = 368.0
text = "0"
script = ExtResource( 4 )

[node name="SpellLabelTimer" type="Timer" parent="CanvasLayer/GUI/CenterContainer/SpellLabel"]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true
autostart = true

[node name="GameOverScreen" type="CenterContainer" parent="CanvasLayer/GUI"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/GUI/GameOverScreen"]
margin_left = 599.0
margin_top = 328.0
margin_right = 681.0
margin_bottom = 391.0

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GUI/GameOverScreen/HBoxContainer"]
margin_right = 82.0
margin_bottom = 17.0
text = "Game Over"

[node name="ScoreLabel" type="Label" parent="CanvasLayer/GUI/GameOverScreen/HBoxContainer"]
margin_top = 21.0
margin_right = 82.0
margin_bottom = 38.0
text = "Score: "
script = ExtResource( 8 )
player_score = ExtResource( 9 )

[node name="RestartButton" type="Button" parent="CanvasLayer/GUI/GameOverScreen/HBoxContainer"]
margin_top = 42.0
margin_right = 82.0
margin_bottom = 63.0
text = "Restart"

[connection signal="tween_step" from="CanvasLayer/GUI/SpellInfo/SpellInfoTween" to="." method="_on_SpellInfoTween_tween_step"]
[connection signal="pressed" from="CanvasLayer/GUI/GameOverScreen/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]

[editable path="World"]
